Docs improved.
